# ghostfat

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: boot.rs  config.rs  dir.rs  file.rs  lib.rs
tests/: integration.rs
