[package]
name = "ghostfat"
version = "0.1.0"
edition = "2021"

[features]
std = []
nightly = []
default = [ "std" ]

[dependencies]
defmt = "0.3.1"
log = { version = "0.4.16", default_features = false }
packing = "0.2.0"
usbd_scsi = "0.1.0"
bitflags = "1.3.2"

[dev-dependencies]
fatfs = "0.3.5"
rand = "0.8.5"
simplelog = "0.11.2"
